# ERASOR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
ERASOR/: CMakeLists.txt  package.xml
ERASOR/config/: large_scale.yaml  seq_00.yaml  seq_01.yaml  seq_05.yaml  seq_07.yaml  viz_params.yaml  your_own_env_ouster.yaml  your_own_env_vel16.yaml
ERASOR/config/deprecated/: kitti_scdr.yaml
ERASOR/img/00/: README.md
ERASOR/img/02/: README.md
ERASOR/img/05/: README.md
ERASOR/include/erasor/: OfflineMapUpdater.h
ERASOR/include/tools/: erasor_utils.hpp
ERASOR/launch/: mapgen.launch  mapgen_in_large_scale.launch  run_erasor.launch  run_erasor_in_your_env_ouster.launch  viz_kitti_map.launch
ERASOR/msg/: nodes.msg
ERASOR/rviz/: erasor_map_in_your_env_v2.rviz  kitti_mapgen.rviz  srt.rviz  viz_kitti_map_tmp.rviz
ERASOR/rviz/to_be_updated/: drbfactory_demonstration.rviz  ground_body.rviz  korea_univ_demonstration.rviz  map_comparison.rviz  map_comparison_exag.rviz  mapupdater_body.rviz  scdr_bodyframe_seq1.rviz
ERASOR/scripts/semantickitti2bag/: analyze_intensities.py  kitti2bag.py  scribble.py
ERASOR/src/mapgen/: mapgen.hpp
ERASOR/src/offline_map_updater/: main_in_your_env.cpp  main_kitti.cpp
ERASOR/src/offline_map_updater/src/: OfflineMapUpdater.cpp  erasor.cpp  erasor_utils.cpp
ERASOR/src/utils/: compare_complement.cpp  fill_removert_intensity.cpp  parse_data.cpp  viz_kitti_map.cpp
config/: large_scale.yaml  large_scale_05.yaml  seq_00.yaml  seq_01.yaml  seq_02.yaml  seq_05.yaml  seq_07.yaml  viz_params.yaml  your_own_env.yaml  your_own_env_ouster.yaml
config/deprecated/: ISRM2.yaml  ekf_param.yaml  kitti_scdr.yaml
de_msg/: CMakeLists.txt  package.xml
de_msg/msg/: mclnode.msg  node.msg  satelliteMap.msg
img/: Description.md
img/01/: README.md
img/07/: README.md
include/erasor/: OfflineMapUpdater.h  OnlineMapUpdater.h  erasor.h
include/tools/: erasor_utils.hpp
launch/: compare_results.launch  mapgen.launch  run_erasor.launch  run_erasor_in_large_scale.launch  run_erasor_in_your_env.launch  run_erasor_in_your_env_in_large_scale.launch  run_erasor_in_your_env_ouster.launch  run_erasor_in_your_env_vel16.launch  total_map_viz_seq_05.yaml  viz_kitti_map.launch
msg/: node.msg
rviz/: erasor_map.rviz  erasor_map_in_your_env.rviz  erasor_map_in_your_env_v2.rviz  map_comparison.rviz  srt.rviz  viz_kitti_map.rviz
rviz/deprecated/: complement_comparison.rviz  entrance_demonstration.rviz  kitti_mapgen.rviz  scdr_bodyframe_tmp.rviz  vizmap.rviz  w16_demonstration.rviz
rviz/to_be_updated/: ground.rviz  parkinglot_demonstration.rviz
scripts/: analysis.py  analysis_py3.py  analysis_runner.py  covTool.py
scripts/pypcd_py3/: __init__.py  nea_pc_format.py  numpy_pc2.py  pdutil.py  pypcd.py  sautil.py
scripts/semantickitti2bag/: README.md  analysis.py  analysis_check.py  analysis_octomap.py  comparison_cpp_python.py  kitti2node.py  parsing.py  plot_num_dynamic_obj.py  plot_num_dynamic_obj_seq05.py
scripts/semantickitti2bag/pykitti/: odometry.py  utils.py
src/: compare_map.cpp
src/mapgen/: main.cpp  mapgen.hpp
src/offline_map_updater/: erasor_main.cpp  main_in_your_env.cpp  main_in_your_env_ros.cpp
src/offline_map_updater/src/: OfflineMapUpdater.cpp  OnlineMapUpdater.cpp  erasor.cpp  erasor_utils.cpp
src/online_map_updater/src/: OnlineMapUpdater.cpp  erasor.cpp
src/test_codes/: merge_map.cpp  pcl_kd_tree.cpp  pcl_scribble.cpp  pub_polygon.cpp  viz_kitti_map.cpp  viz_map.cpp
src/utils/: compare_map.cpp  main.cpp  pub_marker.cpp  speed_check.cpp
