<?xml version="1.0"?>
<package>
  <name>de_msg</name>
  <version>0.0.0</version>
  <description>package for dynMapping</description>

  <maintainer email="sswan55@kaist.ac.kr">Seungwon Song</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_depend>pcl_omp_registration</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>pcl_omp_registration</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
